--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,36 +7,13 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-          
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      
-      - name: Run tests with coverage
-        run: |
-          pip install pytest pytest-cov
-          pytest --cov=. --cov-report=xml
-  
   sonarqube:
     name: SonarQube Scan
     runs-on: ubuntu-latest
-    needs: test
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          fetch-depth: 0  # Required for better analysis
       
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -52,6 +29,21 @@ jobs:
       - name: Run tests with coverage
         run: |
           pytest --cov=. --cov-report=xml
+      
+      # Create sonar-project.properties file dynamically
+      - name: Create sonar-project.properties
+        run: |
+          cat > sonar-project.properties << EOF
+          sonar.organization=${{ secrets.SONAR_ORGANIZATION }}
+          sonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+          sonar.projectName=Secure DevOps Backend
+          sonar.branch.name=main
+          sonar.sources=.
+          sonar.tests=test_app.py
+          sonar.python.coverage.reportPaths=coverage.xml
+          sonar.sourceEncoding=UTF-8
+          sonar.python.version=3.10
+          EOF
       
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v5.0.0
@@ -59,10 +51,3 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: https://sonarcloud.io
-        with:
-          args: >
-            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
-            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-            -Dsonar.python.coverage.reportPaths=coverage.xml
-            -Dsonar.sources=.
-            -Dsonar.tests=test_app.py
