--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,6 @@
 sonar.projectName=Secure DevOps Backend
+# Define the main branch name explicitly
+sonar.branch.name=main
 sonar.sources=.
 sonar.tests=test_app.py
 sonar.python.coverage.reportPaths=coverage.xml
