--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,10 +35,9 @@ jobs:
         sonarcloud_token: ${{ secrets.SONAR_TOKEN }}  # Use GitHub Secrets for SONAR_TOKEN
         sonarcloud_org: ${{ secrets.SONAR_ORG }}      # Use GitHub Secrets for SONAR_ORG
         sonarcloud_project_key: ${{ secrets.SONAR_PROJECT_KEY }} # Use GitHub Secrets for SONAR_PROJECT_KEY
+        sonarcloud_project_name: 'backend-project'  # (Optional) You can specify the project name here
       env:
         SONAR_SCANNER_OPTS: "-Xmx2G"
-      run: |
-        sonar-scanner
 
   snyk:
     runs-on: ubuntu-latest
