--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,55 +1,53 @@
-name: Backend CI/CD
+name: Backend CI/CD Pipeline
 
 on:
-  pull_request:
-    branches:
-      - main
   push:
-    branches:
-      - main
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  build:
+  sonarqube:
+    name: SonarQube Scan
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
-
-    - name: Run tests
-      run: |
-        pytest
-
-    - name: SonarQube Analysis
-      uses: SonarSource/sonarcloud-github-action@v1
-      with:
-        sonarcloud_token: ${{ secrets.SONAR_TOKEN }}  # Use GitHub Secrets for SONAR_TOKEN
-        sonarcloud_organization: ${{ secrets.SONAR_ORGANIZATION }}      # Use GitHub Secrets for SONAR_ORG
-        sonarcloud_project_key: ${{ secrets.SONAR_PROJECT_KEY }} # Use GitHub Secrets for SONAR_PROJECT_KEY
-        sonarcloud_project_name: 'backend-project'  # (Optional) You can specify the project name here
-      env:
-        SONAR_SCANNER_OPTS: "-Xmx2G"
-
-  snyk:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Install SNYK
-      run: pip install snyk
-
-    - name: Test for vulnerabilities using SNYK
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}  # Use GitHub Secrets for SNYK_TOKEN
-      run: snyk test
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Required for better analysis
+      
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest pytest-cov
+      
+      - name: Run tests with coverage
+        run: |
+          pytest --cov=. --cov-report=xml
+      
+      # Create sonar-project.properties file dynamically
+      - name: Create sonar-project.properties
+        run: |
+          cat > sonar-project.properties << EOF
+          sonar.organization=${{ secrets.SONAR_ORGANIZATION }}
+          sonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+          sonar.projectName=Secure DevOps Backend
+          sonar.branch.name=main
+          sonar.sources=.
+          sonar.tests=test_app.py
+          sonar.python.coverage.reportPaths=coverage.xml
+          sonar.sourceEncoding=UTF-8
+          sonar.python.version=3.10
+          EOF
+      
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarqube-scan-action@v5.0.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: https://sonarcloud.io
