--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,53 +1,45 @@
-name: Backend CI/CD Pipeline
+name: Backend CI/CD
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - dev
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
+      - dev
 
 jobs:
-  sonarqube:
-    name: SonarQube Scan
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0  # Required for better analysis
-      
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest pytest-cov
-      
-      - name: Run tests with coverage
-        run: |
-          pytest --cov=. --cov-report=xml
-      
-      # Create sonar-project.properties file dynamically
-      - name: Create sonar-project.properties
-        run: |
-          cat > sonar-project.properties << EOF
-          sonar.organization=${{ secrets.SONAR_ORGANIZATION }}
-          sonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-          sonar.projectName=Secure DevOps Backend
-          sonar.branch.name=main
-          sonar.sources=.
-          sonar.tests=test_app.py
-          sonar.python.coverage.reportPaths=coverage.xml
-          sonar.sourceEncoding=UTF-8
-          sonar.python.version=3.10
-          EOF
-      
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarqube-scan-action@v5.0.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: https://sonarcloud.io
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Run backend tests with coverage
+      run: |
+        python -m pytest --cov=.
+
+    - name: SNYK Security Test
+      uses: snyk/actions/python@v2
+      with:
+        command: test
+        args: --all-projects
+
+    - name: SonarCloud Scan
+      uses: SonarSource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
