--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,7 @@
 sonar.projectName=Secure DevOps Backend
-sonar.sources=.
+sonar.projectKey=YOUR_PROJECT_KEY
+sonar.organization=YOUR_ORGANIZATION
+sonar.sources=app.py  # Specify only the source files
 sonar.tests=test_app.py
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.sourceEncoding=UTF-8
